--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.0",
     "storybook": "^8.2.7",
+    "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
