--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.0",
     "storybook": "^8.2.7",
@@ -39,6 +40,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "kakao.maps.d.ts": "^0.1.40",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
